fix: error message and button gap updated

--- a/library_management/src/styles/components/book_list.scss
+++ b/library_management/src/styles/components/book_list.scss
@@ -2,6 +2,12 @@
   display: flex;
   flex-direction: column;
 
+  .error {
+    font-size: 14px;
+    color: red;
+    margin-bottom: 5px;
+  }
+
   .book-list {
     display: flex;
     flex-direction: column;
