--- a/library_management/src/styles/components/header.scss
+++ b/library_management/src/styles/components/header.scss
@@ -7,5 +7,6 @@
     display: flex;
     margin-left: auto;
     align-items: center;
+    gap: 15px;
   }
 }
